implemented user register route

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,8 +1,9 @@
 @import "default";
 @import "mixin";
 @import "font";
+@import "loader";
+@import "login";
 
 .App {
   @include flex();
-  height: 100dvh;
 }
